peut update de la doc, factorisation et correction de bug
