# router/user-playlist/index.js
@@ -4,6 +4,7 @@ const router = express.Router();
 const authMiddleware = require('../../modules/auth-middleware');
 
 const db = require('../../modules/db');
+const { ownPlaylist } = require('../../modules/verif');
 
 // Route pour crée une playlist
 router.post('/', authMiddleware, async (req, res) => {
@@ -22,11 +23,13 @@ router.post('/', authMiddleware, async (req, res) => {
 
 // Route pour obtenir toute les playlists de l'utilisateur fesant la demande
 router.get('/', authMiddleware, async (req, res) => {
+  const { userId } = req.user.userId ? req.user : req.query;
+
   const playlist = await db('users_playlists') //
     .join('playlist', 'users_playlists.playlist_id', 'playlist.id')
-    .where('id', req.user.userId);
+    .where('users_playlists.user_id', userId);
 
-  return res.status(200).send({ playlist });
+  return res.status(200).json(playlist);
 });
 
 // Route pour obtenir les informations d'une playlist selon son id
@@ -39,27 +42,12 @@ router.get('/:id', async (req, res) => {
   return res.status(200).json(playlist);
 });
 
-// obtient toute les playlists liées à un user selon son id.
-router.get('/user/:userId', async (req, res) => {
-  const { userId } = req.params;
-
-  const playlist = await db('users_playlists') //
-    .join('playlist', 'users_playlists.playlist_id', 'playlist.id')
-    .where('id', userId);
-
-  return res.status(200).send({ playlist });
-});
-
+// efface playlist selon son id
 router.delete('/:id', authMiddleware, async (req, res) => {
   const { id } = req.params;
 
-  const playlist = await db('playlist') //
-    .join('users_playlists', 'playlist.id', 'users_playlists.playlist_id')
-    .where('playlist.id', id)
-    .first();
-
-  if (!playlist) return res.status(404).send({ deleted: 'non existant' });
-  if (req.user.userId !== playlist.user_id) return res.status(401).send({ msg: 'Pas les permissions nécessaire pour supprimer cette musique' });
+  const { status, message } = ownPlaylist(req.user.userId);
+  if (status) return res.status(status).send({ message });
 
   await db.raw(`
     DELETE playlist,
